fix: Auth column width and Volumes tooltip
- Increased .col-auth width from 4em to 5em to prevent truncation
- Changed Volumes tooltip to generic "hover for breakdown" since
  volume names are autodiscovered

--- a/services/jupyterhub/html_templates_enhanced/static/custom.css
+++ b/services/jupyterhub/html_templates_enhanced/static/custom.css
@@ -1536,8 +1536,8 @@ textarea.form-control {
 }
 
 .activity-table .col-auth {
-  width: 4em;
-  min-width: 4em;
+  width: 5em;
+  min-width: 5em;
 }
 
 .activity-table .col-status {
